--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,4 @@ app.*.map.json
 /android/app/release
 
 # Firebase config - do not commit
-app/google-services.json
+android/app/google-services.json
